--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
 
                 <div class="conteudo-beneficios">
                     <ul class="lista-beneficios">
-                        <li class="itens">Atendimento aos clientes</li>
-                        <li class="itens">Espaço diferenciado</li>
-                        <li class="itens">Localização</li>
-                        <li class="itens">Profissionais Qualificados</li>
+                        <li class="itens">Artes Exclusivas</li>
+                        <li class="itens">Espaço Acolhedor</li>
+                        <li class="itens">Profissional Qualificada</li>
                         <li class="itens">Pontualidade</li>
                         <li class="itens">Limpeza</li>
                     </ul><img src="corte.jpg" class="imagembeneficios">
