Adicionando imagens do estúdio

--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
 
             </section>
 
+            <section>
+                <h2 class="titulocentro">Estúdio</h2>
+                <div>
+                    <ul class="bloco-imagem">
+                        <img src="corte.jpg" class="imagembeneficios">
+                        <img src="corte2.jpg" class="imagembeneficios">
+                        <img src="estudio.jpeg" class="imagembeneficios">
+                        <img src="estudio2.jpeg" class="imagembeneficios">
+                    </ul>
+                </div>
+            </section>
+
+
             <section class="mapa">
                 <h3 class="titulocentro">Localização</h3>
                 <p>Nosso estabelecimento é localizado na área sul da cidade de Fortaleza.</p>
@@ -63,7 +76,7 @@
                         <li class="itens">Profissional Qualificada</li>
                         <li class="itens">Pontualidade</li>
                         <li class="itens">Limpeza</li>
-                    </ul><img src="corte.jpg" class="imagembeneficios">
+                    </ul>
 
                 </div>
                 <div class="video">
