Corrigindo erros nas imagens e diagramação

--- a/index.html
+++ b/index.html
@@ -43,7 +43,21 @@
 
             </section>
 
-            <section>
+            <section class="beneficios">
+                <h3 class="titulocentro">Benefícios</h3>
+
+                <div class="conteudo-beneficios">
+                    <ul class="lista-beneficios">
+                        <li class="itens">Artes Exclusivas</li>
+                        <li class="itens">Espaço Acolhedor</li>
+                        <li class="itens">Profissional Qualificada</li>
+                        <li class="itens">Pontualidade</li>
+                        <li class="itens">Limpeza</li>
+                    </ul>
+
+            </section>
+
+            <section class="bloco-imagem2">
                 <h2 class="titulocentro">Estúdio</h2>
                 <div>
                     <ul class="bloco-imagem">
@@ -51,6 +65,9 @@
                         <img src="corte2.jpg" class="imagembeneficios">
                         <img src="estudio.jpeg" class="imagembeneficios">
                         <img src="estudio2.jpeg" class="imagembeneficios">
+                        <img src="estudio2.jpeg" class="imagembeneficios">
+
+
                     </ul>
                 </div>
             </section>
@@ -66,24 +83,7 @@
                 </div>
             </section>
 
-            <section class="beneficios">
-                <h3 class="titulocentro">Benefícios</h3>
 
-                <div class="conteudo-beneficios">
-                    <ul class="lista-beneficios">
-                        <li class="itens">Artes Exclusivas</li>
-                        <li class="itens">Espaço Acolhedor</li>
-                        <li class="itens">Profissional Qualificada</li>
-                        <li class="itens">Pontualidade</li>
-                        <li class="itens">Limpeza</li>
-                    </ul>
-
-                </div>
-                <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/c6wOUS7hkIM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-
-            </section>
         </main>
 
         <footer>
