Adicionando redes sociais

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <header>
+
         <div class="caixa">
             <h1><img src="logo-branco.png"></h1>
-
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -43,6 +43,17 @@
 
             </section>
 
+            <section class="redessociais">
+                <h3 class="titulosimples"><strong>Redes Sociais</strong></h3>
+                <div>
+                    <ul class="bloco-links">
+                        <a href="https://www.instagram.com/milaink/"> <img class="icones" src="instaicon.png" alt="ícone do Instagram." /> </a>
+                        <a href="https://milaink.tumblr.com/"> <img class="icones" src="tumblricon.png" alt="ícone do Tumblr." /> </a>
+                        <a href="https://www.behance.net/srtacami"> <img class="icones" src="behanceicom.png" alt="ícone do Behance." /> </a>
+                    </ul>
+                </div>
+            </section>
+
             <section class="beneficios">
                 <h3 class="titulocentro">Benefícios</h3>
 
@@ -53,6 +64,7 @@
                         <li class="itens">Profissional Qualificada</li>
                         <li class="itens">Pontualidade</li>
                         <li class="itens">Limpeza</li>
+                        <li class="itens">LGBTQI+ Friendly</li>
                     </ul>
 
             </section>
@@ -61,13 +73,11 @@
                 <h2 class="titulocentro">Estúdio</h2>
                 <div>
                     <ul class="bloco-imagem">
+                        <img src="foto.jpg" class="imagembeneficios">
                         <img src="corte.jpg" class="imagembeneficios">
                         <img src="corte2.jpg" class="imagembeneficios">
                         <img src="estudio.jpeg" class="imagembeneficios">
                         <img src="estudio2.jpeg" class="imagembeneficios">
-                        <img src="estudio2.jpeg" class="imagembeneficios">
-
-
                     </ul>
                 </div>
             </section>
