Organização do CSS

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Milaink Tattoo Estúdio</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/reset.css">
+    <link rel="stylesheet" href="estilos/style-index.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
     <header>
+        
 
         <div class="caixa">
-            <h1><img src="logo-branco.png"></h1>
+            <h1><img src="imagens/logo-branco.png"></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -32,13 +33,13 @@
             <section class="principal">
                 <h2 class="titulocentro">Sobre a Tatuadora</h2>
 
-                <img class="utensilios" src="utensilios.png" alt="Utensílios de um barbeiro." />
+                <img class="utensilios" src="imagens/utensilios.png" alt="Utensílios de um barbeiro." />
 
                 <p><strong> Camila de Medeiros </strong> tem uma formação sólida e especializada em Artes Visuais, sendo desenhista e pintora profissional há mais de 10 anos.
                     <p>Se tornar uma ótima tatuadora foi a realização de um sonho que nasceu há 6 anos.</p>
                     <p>Além disso trabalha como professora de artes, desenho e tatuagem de forma particular e em escolas estaduais do Ceará.</p>
 
-                    <p id="missao"><em> Sua missão é: <strong>"Proporcionar auto-estima
+                    <p><em> Sua missão é: <strong>"Proporcionar auto-estima
                         e qualidade de vida aos clientes"</strong>.</em> </p>
 
             </section>
@@ -47,9 +48,9 @@
                 <h3 class="titulosimples"><strong>Redes Sociais</strong></h3>
                 <div>
                     <ul class="bloco-links">
-                        <a href="https://www.instagram.com/milaink/"> <img class="icones" src="instaicon.png" alt="ícone do Instagram." /> </a>
-                        <a href="https://milaink.tumblr.com/"> <img class="icones" src="tumblricon.png" alt="ícone do Tumblr." /> </a>
-                        <a href="https://www.behance.net/srtacami"> <img class="icones" src="behanceicom.png" alt="ícone do Behance." /> </a>
+                        <a href="https://www.instagram.com/milaink/"> <img class="icones" src="imagens/instaicon.png" alt="ícone do Instagram." /> </a>
+                        <a href="https://milaink.tumblr.com/"> <img class="icones" src="imagens/tumblricon.png" alt="ícone do Tumblr." /> </a>
+                        <a href="https://www.behance.net/srtacami"> <img class="icones" src="imagens/behanceicom.png" alt="ícone do Behance." /> </a>
                     </ul>
                 </div>
             </section>
@@ -73,11 +74,11 @@
                 <h2 class="titulocentro">Estúdio</h2>
                 <div>
                     <ul class="bloco-imagem">
-                        <img src="foto.jpg" class="imagembeneficios">
-                        <img src="corte.jpg" class="imagembeneficios">
-                        <img src="corte2.jpg" class="imagembeneficios">
-                        <img src="estudio.jpeg" class="imagembeneficios">
-                        <img src="estudio2.jpeg" class="imagembeneficios">
+                        <img src="imagens/foto.jpg" class="imagembeneficios">
+                        <img src="imagens/corte.jpg" class="imagembeneficios">
+                        <img src="imagens/corte2.jpg" class="imagembeneficios">
+                        <img src="imagens/estudio.jpeg" class="imagembeneficios">
+                        <img src="imagens/estudio2.jpeg" class="imagembeneficios">
                     </ul>
                 </div>
             </section>
@@ -97,7 +98,7 @@
         </main>
 
         <footer>
-            <img src="logo-branco.png">
+            <img src="imagens/logo-branco.png">
             <p class="copyright">&copy; Copyright Milaink - 2021</p>
         </footer>
 
