--- a/contato.html
+++ b/contato.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Barbearia Alura</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/reset.css">
+    <link rel="stylesheet" href="estilos/style-contato.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
 </head>
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="logo-branco.png" alt="Logo da Barbearia"></h1>
+            <h1><img src="imagens/logo-branco.png" alt="Logo da Barbearia"></h1>
 
             <nav>
                 <ul>
@@ -89,7 +89,7 @@
     </main>
 
     <footer>
-        <img src="logo-branco.png" alt="Logo da Barbearia">
+        <img src="imagens/logo-branco.png" alt="Logo da Barbearia">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
     </footer>
 </body>
