--- a/produtos.html
+++ b/produtos.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Produtos - Barbearia Alura</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/reset.css">
+    <link rel="stylesheet" href="estilos/style-produto.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="logo-branco.png"></h1>
+            <h1><img src="imagens/logo-branco.png"></h1>
 
             <nav>
                 <ul>
@@ -27,30 +27,16 @@
     </header>
 
     <main>
-        <ul class="produtos">
-            <li>
-                <h2>Cabelo</h2>
-                <img src="cabelo.jpg">
-                <p class="proddesc">Na tesoura ou máquina, como o cliente preferir</p>
-                <p class="prodprec">R$ 25,00</p>
-            </li>
-            <li>
-                <h2>Barba</h2>
-                <img src="barba.jpg">
-                <p class="proddesc">Corte e desenho profissional de barba</p>
-                <p class="prodprec">R$ 18,00</p>
-            </li>
-            <li>
-                <h2>Cabelo + Barba </h2>
-                <img src="cabelo+barba.jpg">
-                <p class="proddesc">Pacote completo de cabelo e barba</p>
-                <p class="prodprec">R$ 35,00</p>
-            </li>
+        <ul>
+            <a href="imagem.html"> <img class="imagembeneficios" src="imagens/foto1.jpg" alt="Beija-flor" /> </a>
+            <img src="imagens/foto2.jpg" class="imagembeneficios">
+            <img src="imagens/foto3.jpg" class="imagembeneficios">
+            <img src="imagens/foto4.jpg" class="imagembeneficios">
+            <img src="imagens/foto5.jpg" class="imagembeneficios">
         </ul>
-    </main>
 
     <footer>
-        <img src="logo-branco.png">
+        <img src="imagens/logo-branco.png">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
     </footer>
 </body>
