Alteração de Designações

--- a/contato.html
+++ b/contato.html
@@ -73,16 +73,12 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Segunda</td>
-                    <td>8h ~ 20h</td>
+                    <td>Segunda a Sexta</td>
+                    <td>8h ~ 18h</td>
                 </tr>
                 <tr>
-                    <td>Quarta</td>
-                    <td>8h ~ 20h</td>
-                </tr>
-                <tr>
-                    <td>Sexta</td>
-                    <td>8h ~ 20h</td>
+                    <td>Sábado</td>
+                    <td>8h ~ 16h</td>
                 </tr>
             </tbody>
         </table>
