--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <section class="principal">
                 <h2 class="titulocentro">Sobre a Tatuadora</h2>
 
-                <img class="utensilios" src="imagens/utensilios.png" alt="Utensílios de um barbeiro." />
+                <img class="avatar" src="imagens/avatar.png" alt="Foto da Tatuadora." />
 
                 <p><strong> Camila de Medeiros </strong> tem uma formação sólida e especializada em Artes Visuais, sendo desenhista e pintora profissional há mais de 10 anos.
                     <p>Se tornar uma ótima tatuadora foi a realização de um sonho que nasceu há 6 anos.</p>
@@ -47,7 +47,7 @@
             <section class="redessociais">
                 <h3 class="titulosimples"><strong>Redes Sociais</strong></h3>
                 <div>
-                    <ul class="bloco-links">
+                    <ul class="bloco-redesocial">
                         <a href="https://www.instagram.com/milaink/"> <img class="icones" src="imagens/instaicon.png" alt="ícone do Instagram." /> </a>
                         <a href="https://milaink.tumblr.com/"> <img class="icones" src="imagens/tumblricon.png" alt="ícone do Tumblr." /> </a>
                         <a href="https://www.behance.net/srtacami"> <img class="icones" src="imagens/behanceicom.png" alt="ícone do Behance." /> </a>
@@ -70,15 +70,15 @@
 
             </section>
 
-            <section class="bloco-imagem2">
+            <section class="estudio">
                 <h2 class="titulocentro">Estúdio</h2>
                 <div>
-                    <ul class="bloco-imagem">
-                        <img src="imagens/foto.jpg" class="imagembeneficios">
-                        <img src="imagens/corte.jpg" class="imagembeneficios">
-                        <img src="imagens/corte2.jpg" class="imagembeneficios">
-                        <img src="imagens/estudio.jpeg" class="imagembeneficios">
-                        <img src="imagens/estudio2.jpeg" class="imagembeneficios">
+                    <ul class="bloco-estudio">
+                        <img src="imagens/e1.jpg" class="foto-estudio">
+                        <img src="imagens/e2.jpg" class="foto-estudio">
+                        <img src="imagens/e3.jpeg" class="foto-estudio">
+                        <img src="imagens/e4.jpg" class="foto-estudio">
+                        <img src="imagens/e5.jpeg" class="foto-estudio">
                     </ul>
                 </div>
             </section>
