--- a/produtos.html
+++ b/produtos.html
@@ -28,11 +28,11 @@
 
     <main>
         <ul>
-            <a href="imagem.html"> <img class="imagembeneficios" src="imagens/foto1.jpg" alt="Beija-flor" /> </a>
-            <img src="imagens/foto2.jpg" class="imagembeneficios">
-            <img src="imagens/foto3.jpg" class="imagembeneficios">
-            <img src="imagens/foto4.jpg" class="imagembeneficios">
-            <img src="imagens/foto5.jpg" class="imagembeneficios">
+            <a href="foto-tattoo/imagem.html"> <img class="foto-tattoo" src="imagens/foto1.jpg" alt="Beija-flor" /> </a>
+            <img src="imagens/foto2.jpg" class="foto-tattoo">
+            <img src="imagens/foto3.jpg" class="foto-tattoo">
+            <img src="imagens/foto4.jpg" class="foto-tattoo">
+            <img src="imagens/foto5.jpg" class="foto-tattoo">
         </ul>
 
     <footer>
