--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 
 <body>
     <header>
-        
-
-        <div class="caixa">
-            <h1><img src="imagens/logo-branco.png"></h1>
+        <div>
+            <img src="imagens/logo-branco.png">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
