--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Produtos - Barbearia Alura</title>
+    <title>Milaink Tattoo Estúdio</title>
     <link rel="stylesheet" href="estilos/reset.css">
     <link rel="stylesheet" href="estilos/style-produto.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -33,6 +33,11 @@
             <img src="imagens/foto3.jpg" class="foto-tattoo">
             <img src="imagens/foto4.jpg" class="foto-tattoo">
             <img src="imagens/foto5.jpg" class="foto-tattoo">
+            <img src="imagens/foto6.jpg" class="foto-tattoo">
+            <img src="imagens/foto7.jpg" class="foto-tattoo">
+            <img src="imagens/foto8.jpg" class="foto-tattoo">
+            <img src="imagens/foto9.jpg" class="foto-tattoo">
+            <img src="imagens/foto10.jpg" class="foto-tattoo">
         </ul>
 
     <footer>
