--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div>
-            <img src="imagens/logo-branco.png">
+            <img src="imagens/logo-branco.png" alt="Logo da Tatuadora">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -97,7 +97,7 @@
 
         <footer>
             <img src="imagens/logo-branco.png">
-            <p class="copyright">&copy; Copyright Milaink - 2021</p>
+            <p class="copyright">&copy; Copyright Milaink - 2022</p>
         </footer>
 
 </html>
