--- a/contato.html
+++ b/contato.html
@@ -12,8 +12,8 @@
 
 <body>
     <header>
-        <div class="caixa">
-            <h1><img src="imagens/logo-branco.png" alt="Logo da Barbearia"></h1>
+        <div>
+            <h1><img src="imagens/logo-branco.png" alt="Logo da Tatuadora"></h1>
 
             <nav>
                 <ul>
@@ -86,7 +86,7 @@
 
     <footer>
         <img src="imagens/logo-branco.png" alt="Logo da Barbearia">
-        <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+        <p class="copyright">&copy; Copyright Milaink - 2022</p>
     </footer>
 </body>
 
