--- a/produtos.html
+++ b/produtos.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <div class="caixa">
-            <h1><img src="imagens/logo-branco.png"></h1>
+        <div>
+            <h1><img src="imagens/logo-branco.png" alt="Logo da Tatuadora"></h1>
 
             <nav>
                 <ul>
@@ -42,7 +42,7 @@
 
     <footer>
         <img src="imagens/logo-branco.png">
-        <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+        <p class="copyright">&copy; Copyright Milaink - 2022</p>
     </footer>
 </body>
 
