Adicionando zoom nas fotos

--- a/contato.html
+++ b/contato.html
@@ -56,7 +56,6 @@
                 <select>
                 <option>Manhã</option>
                 <option>Tarde</option>
-                <option>Noite</option>
             </select>
             </fieldset>
 
@@ -66,26 +65,8 @@
 
         </form>
 
-        <table class="principal">
-            <thead>
-                <th>Dia</th>
-                <th>Horários</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Segunda a Sexta</td>
-                    <td>8h ~ 18h</td>
-                </tr>
-                <tr>
-                    <td>Sábado</td>
-                    <td>8h ~ 16h</td>
-                </tr>
-            </tbody>
-        </table>
-    </main>
-
     <footer>
-        <img src="imagens/logo-branco.png" alt="Logo da Barbearia">
+        <img src="imagens/logo-branco-footer.png" alt="Logo da Barbearia">
         <p class="copyright">&copy; Copyright Milaink - 2022</p>
     </footer>
 </body>
