--- a/foto-tattoo/imagem10.html
+++ b/foto-tattoo/imagem10.html
@@ -13,11 +13,11 @@
 
 <body class="botao">
     <div>
-        <a href="../produtos.html"> <img class="foto-tattoo" src="../imagens/fechar.png" alt="ícone do Instagram." /> </a>
+        <a href="../produtos.html"> <img class="foto-tattoo" src="../imagens/fechar.png" alt="ícone de fechar" /> </a>
     </div>
 
     <section class="fundo">
-        <img src="../imagens/foto1.jpg" class="foto">
+        <img src="../imagens/foto10.jpg" class="foto">
     </section>
 </body>
 
