--- a/produtos.html
+++ b/produtos.html
@@ -28,20 +28,20 @@
 
     <main>
         <ul>
-            <a href="foto-tattoo/imagem.html"> <img class="foto-tattoo" src="imagens/foto1.jpg" alt="Beija-flor" /> </a>
-            <img src="imagens/foto2.jpg" class="foto-tattoo">
-            <img src="imagens/foto3.jpg" class="foto-tattoo">
-            <img src="imagens/foto4.jpg" class="foto-tattoo">
-            <img src="imagens/foto5.jpg" class="foto-tattoo">
-            <img src="imagens/foto6.jpg" class="foto-tattoo">
-            <img src="imagens/foto7.jpg" class="foto-tattoo">
-            <img src="imagens/foto8.jpg" class="foto-tattoo">
-            <img src="imagens/foto9.jpg" class="foto-tattoo">
-            <img src="imagens/foto10.jpg" class="foto-tattoo">
+            <a href="foto-tattoo/imagem1.html"> <img class="foto-tattoo" src="imagens/foto1.jpg" alt="Beija-flor" /> </a>
+            <a href="foto-tattoo/imagem2.html"> <img class="foto-tattoo" src="imagens/foto2.jpg" alt="Desenho Maia" /> </a>
+            <a href="foto-tattoo/imagem3.html"> <img class="foto-tattoo" src="imagens/foto3.jpg" alt="Coração Aquarelado" /> </a>
+            <a href="foto-tattoo/imagem4.html"> <img class="foto-tattoo" src="imagens/foto4.jpg" alt="Tribal" /> </a>
+            <a href="foto-tattoo/imagem5.html"> <img class="foto-tattoo" src="imagens/foto5.jpg" alt="Peixe Xilogravura" /> </a>
+            <a href="foto-tattoo/imagem6.html"> <img class="foto-tattoo" src="imagens/foto6.jpg" alt="Naruto" /> </a>
+            <a href="foto-tattoo/imagem7.html"> <img class="foto-tattoo" src="imagens/foto7.jpg" alt="Toy Story" /> </a>
+            <a href="foto-tattoo/imagem8.html"> <img class="foto-tattoo" src="imagens/foto8.jpg" alt="Pássaro Lua" /> </a>
+            <a href="foto-tattoo/imagem9.html"> <img class="foto-tattoo" src="imagens/foto9.jpg" alt="Lua e sol" /> </a>
+            <a href="foto-tattoo/imagem10.html"> <img class="foto-tattoo" src="imagens/foto10.jpg" alt="Universo" /> </a>
         </ul>
 
     <footer>
-        <img src="imagens/logo-branco.png">
+        <img src="imagens/logo-branco-footer.png">
         <p class="copyright">&copy; Copyright Milaink - 2022</p>
     </footer>
 </body>
