--- a/index.html
+++ b/index.html
@@ -90,13 +90,34 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.0309559666243!2d-38.51320424947268!3d-3.8033835972195695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74f9b9a447351%3A0xcaeff03b1bb688b8!2sMilaInk%20Tattoo!5e0!3m2!1spt-BR!2sbr!4v1637370015238!5m2!1spt-BR!2sbr"
                         width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
+
+                <table class="principal">
+                    <thead>
+                        <th>Dias</th>
+                        <th>Horários</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Segunda a Sexta</td>
+                            <td>8h ~ 18h</td>
+                        </tr>
+                        <tr>
+                            <td>Sábado</td>
+                            <td>8h ~ 16h</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </main>
             </section>
 
 
         </main>
 
+      
+
+
         <footer>
-            <img src="imagens/logo-branco.png">
+            <img src="imagens/logo-branco-footer.png">
             <p class="copyright">&copy; Copyright Milaink - 2022</p>
         </footer>
 
